episodes/14/assets/gatekeeper/constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: cloudsqlsize
spec:
  crd:
    spec:
      names:
        kind: CloudSQLSize
        listKind: CloudSQLSizeList
        plural: cloudsqlsizes
        singular: cloudsqlsize
      validation:
        openAPIV3Schema:
          properties:
            size:
              type: integer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package cloudsqlsize

        violation[{"msg": msg,  "details": {}}] {
          input.review.kind.kind = "CloudSQLInstance"
          input.review.operation = "CREATE"
          size := input.review.object.spec.forProvider.settings.dataDiskSizeGb
          size >= input.parameters.size
          msg = sprintf("database size of %d GB is larger than limit of %d GB", [size, input.parameters.size])
        }
